// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Hand /> renders tiles 1`] = `
.emotion-0905tdc-Hand {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 5px;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
}

<div
  className="overlay emotion-0"
>
  <Memo(Tile)
    id="A1"
    key="A1"
    letter="A"
    onClick={[Function]}
  />
  <Memo(Tile)
    id="B1"
    key="B1"
    letter="B"
    onClick={[Function]}
  />
</div>
`;

exports[`<Hand /> renders when no hand 1`] = `
.emotion-0905tdc-Hand {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 5px;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
}

<div
  className="overlay emotion-0"
/>
`;
